[gd_scene load_steps=33 format=2]

[ext_resource path="res://scenes/playground/world_manager.gd" type="Script" id=1]
[ext_resource path="res://tres/styles/gaugebar_back.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/playground/playground.gd" type="Script" id=3]
[ext_resource path="res://assets/buildings/building_01.png" type="Texture" id=4]
[ext_resource path="res://scenes/playground/gauges_manager.gd" type="Script" id=5]
[ext_resource path="res://assets/button_48x48_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/default.png" type="Texture" id=7]
[ext_resource path="res://assets/texture_back.png" type="Texture" id=8]
[ext_resource path="res://assets/texture_front.png" type="Texture" id=9]
[ext_resource path="res://scenes/playground/craft_panel.gd" type="Script" id=10]
[ext_resource path="res://scenes/playground/status_panel.gd" type="Script" id=11]
[ext_resource path="res://scenes/playground/building_window.gd" type="Script" id=12]
[ext_resource path="res://entities/actor/npc.tscn" type="PackedScene" id=13]
[ext_resource path="res://tres/styles/panel.tres" type="StyleBox" id=14]
[ext_resource path="res://scenes/playground/inventory_panel.gd" type="Script" id=15]
[ext_resource path="res://assets/inventory_gear.png" type="Texture" id=16]
[ext_resource path="res://scenes/playground/storage_panel.gd" type="Script" id=17]
[ext_resource path="res://scenes/playground/cooldowns_manager.gd" type="Script" id=18]
[ext_resource path="res://assets/weight.png" type="Texture" id=19]
[ext_resource path="res://assets/gold.png" type="Texture" id=20]
[ext_resource path="res://entities/inventory_item/inventory_item.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/empty_48.png" type="Texture" id=22]
[ext_resource path="res://entities/cooldown_display/cooldown_display.tscn" type="PackedScene" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.533333, 0.0705882, 0.0705882, 0.584314 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.533333, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.286275, 0.509804, 0.266667, 0.541176 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.286275, 0.509804, 0.266667, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.105882, 0.384314, 0.678431, 0.54902 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.105882, 0.384314, 0.678431, 0.815686 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Playground" type="Node2D"]
script = ExtResource( 3 )

[node name="BuildingGhost" type="Sprite" parent="."]
z_index = 5

[node name="OccupiedSpaceArea" type="Area2D" parent="BuildingGhost"]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingGhost/OccupiedSpaceArea"]
shape = SubResource( 1 )

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="LandsHolder" type="Node2D" parent="World"]

[node name="BuildingsHolder" type="Node2D" parent="World"]

[node name="Npc" parent="World" instance=ExtResource( 13 )]
position = Vector2( -117.986, -138.954 )

[node name="EffectsHolder" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( -13.589, 22.5758 )
z_index = 1000
z_as_relative = false
current = true

[node name="StartBuildButton" type="TextureButton" parent="Camera"]
margin_left = -781.41
margin_top = 188.429
margin_right = -711.41
margin_bottom = 263.429
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingButtonsContainer" type="HBoxContainer" parent="Camera/StartBuildButton"]
margin_left = 22.0
margin_top = -55.0
margin_right = 247.0
margin_bottom = -5.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingWindow" type="TabContainer" parent="Camera"]
margin_left = 253.301
margin_top = -440.007
margin_right = 739.301
margin_bottom = -84.0066
tab_align = 0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftTab" type="Tabs" parent="Camera/BuildingWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CraftPanel" type="Panel" parent="Camera/BuildingWindow/CraftTab"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 14 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftListScroll" type="ScrollContainer" parent="Camera/BuildingWindow/CraftTab/CraftPanel"]
margin_left = 11.0
margin_top = 28.0
margin_right = 214.0
margin_bottom = 297.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeContainer" type="VBoxContainer" parent="Camera/BuildingWindow/CraftTab/CraftPanel/CraftListScroll"]

[node name="CurrentCraftIcon" type="TextureRect" parent="Camera/BuildingWindow/CraftTab/CraftPanel"]
margin_left = 288.05
margin_top = 35.9437
margin_right = 384.05
margin_bottom = 131.944
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CurrentCraftButton" type="TextureButton" parent="Camera/BuildingWindow/CraftTab/CraftPanel/CurrentCraftIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Camera/BuildingWindow/CraftTab/CraftPanel/CurrentCraftIcon"]
margin_left = -35.0223
margin_top = 105.205
margin_right = 137.978
margin_bottom = 117.205
value = 25.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QueueContainer" type="GridContainer" parent="Camera/BuildingWindow/CraftTab/CraftPanel"]
margin_left = 232.477
margin_top = 170.272
margin_right = 460.477
margin_bottom = 286.272
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StorageTab" type="Tabs" parent="Camera/BuildingWindow"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="StoragePanel" type="Panel" parent="Camera/BuildingWindow/StorageTab"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 14 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldIcon" type="TextureRect" parent="Camera/BuildingWindow/StorageTab/StoragePanel"]
margin_left = 10.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 38.0
texture = ExtResource( 20 )

[node name="GoldLabel" type="Label" parent="Camera/BuildingWindow/StorageTab/StoragePanel/GoldIcon"]
margin_left = 41.5
margin_top = 6.5
margin_right = 68.5
margin_bottom = 26.5
text = "45"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StackablesContainer" type="GridContainer" parent="Camera/BuildingWindow/StorageTab/StoragePanel"]
margin_left = 31.0
margin_top = 52.0
margin_right = 437.0
margin_bottom = 199.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipablesContainer" type="ScrollContainer" parent="Camera/BuildingWindow/StorageTab/StoragePanel"]
margin_left = 2.0
margin_top = 199.0
margin_right = 476.0
margin_bottom = 318.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesContainer" type="VBoxContainer" parent="Camera/BuildingWindow/StorageTab/StoragePanel/EquipablesContainer"]
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Camera/BuildingWindow/StorageTab/StoragePanel/EquipablesContainer"]
margin_right = 2.0
margin_bottom = 2.0
mouse_filter = 1
custom_constants/margin_top = 2
custom_constants/margin_left = 2

[node name="ItemsGrid" type="GridContainer" parent="Camera/BuildingWindow/StorageTab/StoragePanel/EquipablesContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryPanel" type="Panel" parent="Camera"]
margin_left = -746.606
margin_top = -420.475
margin_right = -220.606
margin_bottom = -61.4749
mouse_filter = 2
custom_styles/panel = ExtResource( 14 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gear" type="TextureRect" parent="Camera/InventoryPanel"]
margin_left = 96.7898
margin_top = 0.468322
margin_right = 296.79
margin_bottom = 200.469
mouse_filter = 2
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 73.3674
margin_top = 5.19356
margin_right = 121.367
margin_bottom = 53.1936
texture_normal = ExtResource( 22 )

[node name="BodyButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 73.2644
margin_top = 64.7127
margin_right = 121.264
margin_bottom = 112.713
texture_normal = ExtResource( 22 )

[node name="MainHandButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 16.8682
margin_top = 88.3208
margin_right = 64.8682
margin_bottom = 136.321
texture_normal = ExtResource( 22 )

[node name="OffHandButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 134.229
margin_top = 90.9664
margin_right = 182.229
margin_bottom = 138.966
texture_normal = ExtResource( 22 )

[node name="FeetButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 72.6946
margin_top = 143.015
margin_right = 120.695
margin_bottom = 191.015
texture_normal = ExtResource( 22 )

[node name="RightRingButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 4.95148
margin_top = 29.8889
margin_right = 52.9515
margin_bottom = 77.8889
texture_normal = ExtResource( 22 )

[node name="LeftRingButton" parent="Camera/InventoryPanel/Gear" instance=ExtResource( 21 )]
margin_left = 147.446
margin_top = 29.8901
margin_right = 195.446
margin_bottom = 77.8901
texture_normal = ExtResource( 22 )

[node name="ResourcesContainer" type="GridContainer" parent="Camera/InventoryPanel"]
margin_left = 336.644
margin_top = 5.81756
margin_right = 519.644
margin_bottom = 197.818
custom_constants/vseparation = 8
custom_constants/hseparation = 60
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Camera/InventoryPanel"]
margin_top = 202.0
margin_right = 523.0
margin_bottom = 358.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinesContainer" type="VBoxContainer" parent="Camera/InventoryPanel/ScrollContainer"]
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Camera/InventoryPanel/ScrollContainer"]
margin_right = 2.0
margin_bottom = 2.0
mouse_filter = 1
custom_constants/margin_top = 2
custom_constants/margin_left = 2

[node name="ItemsGrid" type="GridContainer" parent="Camera/InventoryPanel/ScrollContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
custom_constants/vseparation = 3
custom_constants/hseparation = 3
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldIcon" type="TextureRect" parent="Camera/InventoryPanel"]
margin_left = 6.22521
margin_top = 86.9944
margin_right = 38.2252
margin_bottom = 118.994
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/InventoryPanel/GoldIcon"]
margin_left = 36.7081
margin_top = 9.34388
margin_right = 76.7081
margin_bottom = 23.3439
text = "1024"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightIcon" type="TextureRect" parent="Camera/InventoryPanel"]
margin_left = 6.00677
margin_top = 153.507
margin_right = 38.0068
margin_bottom = 185.507
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/InventoryPanel/WeightIcon"]
margin_left = 36.7081
margin_top = 9.34388
margin_right = 76.7081
margin_bottom = 23.3439
text = "12.4/40.0"

[node name="ItemGhost" type="Sprite" parent="Camera/InventoryPanel"]
visible = false

[node name="StatusPanel" type="Panel" parent="Camera"]
margin_left = 377.0
margin_top = -70.0
margin_right = 741.0
margin_bottom = 427.0
custom_styles/panel = ExtResource( 14 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Camera/StatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera/StatusPanel/ScrollContainer"]
margin_right = 346.0
margin_bottom = 300.0
rect_min_size = Vector2( 346, 300 )

[node name="Stats" type="Label" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_right = 346.0
margin_bottom = 14.0
text = "Caractéristiques"

[node name="CaracsContainer" type="VBoxContainer" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 346.0
margin_bottom = 18.0

[node name="Line1" type="Panel" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 346.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 2 )

[node name="Skill" type="Label" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 346.0
margin_bottom = 42.0
text = "Compétences"

[node name="SkillsContainer" type="VBoxContainer" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 346.0
margin_bottom = 46.0

[node name="Line2" type="Panel" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 346.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 2 )

[node name="Label3" type="Label" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 346.0
margin_bottom = 70.0
text = "Maîtrises"

[node name="MasteriesContainer" type="VBoxContainer" parent="Camera/StatusPanel/ScrollContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 346.0
margin_bottom = 74.0

[node name="GaugesManager" type="HBoxContainer" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -266.647
margin_top = 379.868
margin_right = 293.353
margin_bottom = 409.868
custom_constants/separation = 40
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthRegainBar" type="ProgressBar" parent="Camera/GaugesManager"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = ExtResource( 2 )
value = 60.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Camera/GaugesManager/HealthRegainBar"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/GaugesManager/HealthRegainBar/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "40 / 40"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaRegainBar" type="ProgressBar" parent="Camera/GaugesManager"]
margin_left = 200.0
margin_right = 360.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = ExtResource( 2 )
value = 60.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaBar" type="ProgressBar" parent="Camera/GaugesManager/StaminaRegainBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 4 )
value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/GaugesManager/StaminaRegainBar/StaminaBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "40 / 40"
align = 1
valign = 1

[node name="ManaRegainBar" type="ProgressBar" parent="Camera/GaugesManager"]
margin_left = 400.0
margin_right = 560.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = ExtResource( 2 )
value = 60.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="ProgressBar" parent="Camera/GaugesManager/ManaRegainBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 160, 30 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera/GaugesManager/ManaRegainBar/ManaBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "40 / 40"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownsManager" type="HBoxContainer" parent="Camera"]
margin_left = -780.427
margin_top = 363.487
margin_right = -740.427
margin_bottom = 403.487
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownDisplay" parent="Camera/CooldownsManager" instance=ExtResource( 23 )]

[connection signal="pressed" from="Camera/StartBuildButton" to="." method="_on_start_build_button_pressed"]
[connection signal="pressed" from="Camera/BuildingWindow/CraftTab/CraftPanel/CurrentCraftIcon/CurrentCraftButton" to="Camera/BuildingWindow/CraftTab/CraftPanel" method="_on_queue_button_cancel_pressed" binds= [ 0 ]]
